# tienes-un-buen-dia

./: .buildinfo  CNAME  README.html  README.rst  genindex.html  index.html  index.rst  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/ejercicios/: ej01-tienes-un-buen-dia.doctree  ej02-la-semana-pasada.doctree
.github/workflows/: sphinx.yaml
_sources/: README.rst.txt  index.rst.txt
docs/source/: conf.py  index.rst
ejercicios/: ej01-tienes-un-buen-dia.html  ej01-tienes-un-buen-dia.rst  ej02-la-semana-pasada.html  ej02-la-semana-pasada.rst
source/: conf.py  index.rst
source/ejercicios/: ej01-tienes-un-buen-dia.rst
