[tool.poetry]
name = "tienes-un-buen-dia"
version = "0.1.0"
description = ""
authors = ["RinceWindWizzard <git@magierdinge.de>"]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^5.0.2"
poetry = "^1.1.13"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
